lil bit of changes

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                         <div class="stat-label">Lua Scripts</div>
                     </div>
                     <div class="stat-item">
+                        <div class="stat-number">40+</div>
+                        <div class="stat-label">Isabelle Configs</div>
+                    </div>
+                    <div class="stat-item">
                         <div class="stat-number">24/7</div>
                         <div class="stat-label">Support</div>
                     </div>
@@ -220,7 +224,7 @@ end)
                     <i class="fab fa-discord"></i>
                 </div>
                 <h3>Discord</h3>
-                <p>Join our active Discord community with 80+ members.</p>
+                <p>Join our active Discord community with 80+ members, where you can download from our huge collection of configs.</p>
                 <a href="https://discord.gg/cvbKHnEQe6" target="_blank" rel="noopener noreferrer" class="btn-community">
                     <i class="fab fa-discord"></i> Join Server
                 </a>
@@ -231,7 +235,7 @@ end)
                 </div>
                 <h3>Github</h3>
                 <p>View our scripts inside of github!</p>
-                <a href="https://github.com/wfrw/isabelle.cfg/tree/main/Scripts" target="_blank" rel="noopener noreferrer" class="btn-community">
+                <a href="https://github.com/wfrw/isabelle.lol/tree/main/Scripts" target="_blank" rel="noopener noreferrer" class="btn-community">
                     <i class="fab fa-github"></i> View
                 </a>
             </div>
