--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="glass-nav">
         <div class="nav-container">
             <div class="nav-brand">
-                <span>Isabelle.cfg</span>
+                <span><span class="purple-letter">Isabelle.</span>cfg</span>
             </div>
             <div class="nav-links">
                 <a href="#home" class="nav-link active">Home</a>
