--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ end)
             <h2>Script Browser</h2>
             <div class="file-browser">
                 <div class="sidebar" id="fileTree">
-                    <div class="loading">Loading repository...</div>
+                    <div class="loading">Loading repository..</div>
                 </div>
                 <div class="file-viewer">
                     <div class="empty-state">
